# NNS

./: README.md
Bufferedreader/include/: TXTBufferedReader.hpp
Bufferedreader/src/: TXTBufferedReader.cpp
Bufferedreader/test/: bufferedReaderTest.cpp
RabinKarp/src/: RabinKarp.cpp
RabinKarp/test/: avalanche.cpp  uniformity.cpp
Rabin_Karp/: CMakeLists.txt
Rabin_Karp/include/: RabibKarp.hpp
Rabin_Karp/src/: RabinKarp.cpp
buffered_reader/: CMakeLists.txt
buffered_reader/include/: buffered_reader.hpp
data/: query.txt  sequence.txt
lsh/: CMakeLists.txt  README.md
lsh/include/: Dotproduct.cpp  hyperplane.hpp  lsh.hpp
lsh/src/: buffered_reader.cpp  hyperplane.cpp  lsh.cpp  nns.cpp
lsh/test/: get_vectors.hpp  hyperplane_test.cpp  shingle_test.cpp
metrics/: CMakeLists.txt
metrics/include/: strict_avalanche_criterion.hpp
operators/: CMakeLists.txt
operators/include/: operators.hpp
operators/test/: adler32_test.cpp  custom_hash_test.cpp  sedgewick_test.cpp
scripts/: README.md  Z_inverted_index  Z_inverted_index.sh  corpora  corpora.sh  dataset.py  dictionary.sh  filters.py  inverted_index.py  normalization  normalization.py  normalize  pdf2txt.sh  regexconstants.py  relabel  triepreparation.py  vect2text  word_count.sh
scripts/normalization/: __init__.py  filters.py  ioutilities.py  regexconstants.py  trie.py
